@@ -1,7 +1,6 @@
 TODO list for balancing-chemical-equations
 
 HIGH PRIORITY
-- change request: redo level-3 game strategy again?
 
 MEDIUM PRIORITY
 
@@ -12,6 +11,9 @@ LOW PRIORITY
 - Kelly colors: boxes=black, canvas=gray[204,204,204]
 - Emily colors: boxes=gray[102,102,102], canvas=white or blue[204,204,255]
 - Kathy colors: boxes=black, canvas=blue[142,153,193]
+- change color of "Show Why" button?
+- get rid of "Hide Why" button?
+- change default position of Game popups?
 
 MIGRATE TO COMMON
  
